--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,17 +1,40 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+*{
+  font-family: 'Roboto', sans-serif;
+}
+
 body{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
+p{
+  color: #555555;
+}
 .main-container-wrapper{
-  margin: 100px 10% 0 10%;
+  padding: 100px 8% 20px 8%;
+  box-sizing: border-box;
+  background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
+  .main-container-inner{
+    background-color: #fff;
+    border-radius: 5px;
+    box-sizing: border-box;
+    padding: 50px 40px;
+    box-shadow: 0 0 5px 0 rgba(0,0,0,0.30);
+  }
   .section-header{
     width: 100%;
     margin-bottom: 15px;
     display: inline-block;
     .section-title{
       float: left;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 38px;
+      color: #000000;
     }
     .section-actions{
       float: right;
@@ -19,13 +42,31 @@ body{
   }
 }
 
+.form-group{
+  .form-control{
+    background: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    border-radius: 5px;
+    width: 100%;
+    height: 33px;
+  }
+}
+
 .btn{
   cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-size: 15px;
+  line-height: 20px;
   &.btn-theme{
     border: 1px solid #FF8D00;
-    padding: 10px 20px;
     background-color: #FF8D00;
     color: #fff;
-    border-radius: 3px;
   }
+  &.btn-ash{
+    border: 1px solid #EEEEEE;
+    background-color: #EEEEEE;
+    color: #555555;
+  }
+
 }
