--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,7 +13,9 @@ body{
 p{
   color: #555555;
 }
+
 .main-container-wrapper{
+  min-height: 100vh;
   padding: 100px 8% 20px 8%;
   box-sizing: border-box;
   background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
@@ -23,6 +25,7 @@ p{
     box-sizing: border-box;
     padding: 50px 40px;
     box-shadow: 0 0 5px 0 rgba(0,0,0,0.30);
+    min-height: 400px;
   }
   .section-header{
     width: 100%;
