--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
-
+$theme: #FF8D00;
 *{
   font-family: 'Roboto', sans-serif;
 }
@@ -14,6 +14,19 @@ p{
   color: #555555;
 }
 
+.pull-left{
+  float: left;
+}
+.pull-right{
+  float: right;
+}
+.text-left{
+  text-align: left;
+}
+.text-right{
+  text-align: right;
+}
+
 .main-container-wrapper{
   min-height: 100vh;
   padding: 100px 8% 20px 8%;
@@ -21,15 +34,20 @@ p{
   background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
   .main-container-inner{
     background-color: #fff;
-    border-radius: 5px;
+    border-radius: 3px;
     box-sizing: border-box;
     padding: 50px 40px;
-    box-shadow: 0 0 5px 0 rgba(0,0,0,0.30);
-    min-height: 400px;
+    box-shadow: 0 0 3px 0 rgba(0,0,0,0.30);
+    min-height: 500px;
+    &.flex-inner{
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
   }
   .section-header{
     width: 100%;
-    margin-bottom: 15px;
+    margin-bottom: 25px;
     display: inline-block;
     .section-title{
       float: left;
@@ -39,6 +57,15 @@ p{
       line-height: 38px;
       color: #000000;
     }
+    .timer-wrapper{
+      float: right;
+      font-style: normal;
+      font-weight: 700;
+      font-size: 32px;
+      line-height: 38px;
+      color: #000000;
+      margin-right: 100px;
+    }
     .section-actions{
       float: right;
     }
@@ -46,12 +73,29 @@ p{
 }
 
 .form-group{
+  margin-bottom: 15px;
   .form-control{
-    background: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    border-radius: 5px;
+    box-sizing: border-box;
+    display: block;
     width: 100%;
-    height: 33px;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #555;
+    background-color: #fff;
+    background-image: none;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+    &:focus {
+      outline: 0;
+      border-color: $theme;
+      box-shadow: 0 0 0 0.2rem rgba($theme, 0.25);
+    }
+  }
+  .helper-text{
+    margin: 3px 0;
   }
 }
 
@@ -72,4 +116,8 @@ p{
     color: #555555;
   }
 
+}
+
+.text-danger{
+  color: #ec5b5b;
 }
