Calculation of sort

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -106,8 +106,8 @@ p{
   font-size: 15px;
   line-height: 20px;
   &.btn-theme{
-    border: 1px solid #FF8D00;
-    background-color: #FF8D00;
+    border: 1px solid $theme;
+    background-color: $theme;
     color: #fff;
   }
   &.btn-ash{
@@ -115,6 +115,12 @@ p{
     background-color: #EEEEEE;
     color: #555555;
   }
+  &.btn-danger{
+    border: 1px solid #ec5b5b;
+    background-color: #ec5b5b;
+    color: #fff;
+  }
+
 
 }
 
