--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,7 +29,7 @@ p{
 
 .main-container-wrapper{
   min-height: 100vh;
-  padding: 100px 8% 20px 8%;
+  padding: 50px 8% 20px 8%;
   box-sizing: border-box;
   background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
   .main-container-inner{
@@ -37,7 +37,7 @@ p{
     border-radius: 3px;
     box-sizing: border-box;
     padding: 50px 40px;
-    box-shadow: 0 0 3px 0 rgba(0,0,0,0.30);
+    box-shadow: 0 0 1px 0 rgba(0,0,0,0.30);
     min-height: 500px;
     &.flex-inner{
       display: flex;
@@ -56,15 +56,19 @@ p{
       font-size: 32px;
       line-height: 38px;
       color: #000000;
+      text-transform: uppercase;
     }
     .timer-wrapper{
       float: right;
-      font-style: normal;
       font-weight: 700;
-      font-size: 32px;
-      line-height: 38px;
+      font-size: 16px;
+      line-height: 22px;
       color: #000000;
-      margin-right: 100px;
+      background-color: #dfdfdf;
+      padding: 10px 20px;
+      border-radius: 5px;
+      box-sizing: border-box;
+      margin-right: 20px;
     }
     .section-actions{
       float: right;
@@ -90,8 +94,8 @@ p{
     transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
     &:focus {
       outline: 0;
-      border-color: $theme;
-      box-shadow: 0 0 0 0.2rem rgba($theme, 0.25);
+      border-color: #fff;
+      box-shadow: 0 0 0 0.1rem rgba(#000, 0.25);
     }
   }
   .helper-text{
@@ -124,6 +128,31 @@ p{
 
 }
 
+.gd-text{
+  background: #ff8d00; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff8d00, #ff00a2); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff8d00, #ff00a2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+.gd-text-2{
+  background: #808080; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #808080, #c8bcbc); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #808080, #c8bcbc); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+}
+
 .text-danger{
   color: #ec5b5b;
+}
+
+.unselectable {
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
