--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -28,17 +28,24 @@ p{
 }
 
 .main-container-wrapper{
+  text-align: center;
   min-height: 100vh;
   padding: 50px 8% 20px 8%;
   box-sizing: border-box;
   background-image: radial-gradient(circle at center center, transparent,rgb(255,255,255)),linear-gradient(309deg, rgba(90, 90, 90,0.05) 0%, rgba(90, 90, 90,0.05) 50%,rgba(206, 206, 206,0.05) 50%, rgba(206, 206, 206,0.05) 100%),linear-gradient(39deg, rgba(13, 13, 13,0.05) 0%, rgba(13, 13, 13,0.05) 50%,rgba(189, 189, 189,0.05) 50%, rgba(189, 189, 189,0.05) 100%),linear-gradient(144deg, rgba(249, 249, 249,0.05) 0%, rgba(249, 249, 249,0.05) 50%,rgba(111, 111, 111,0.05) 50%, rgba(111, 111, 111,0.05) 100%),linear-gradient(166deg, rgba(231, 231, 231,0.05) 0%, rgba(231, 231, 231,0.05) 50%,rgba(220, 220, 220,0.05) 50%, rgba(220, 220, 220,0.05) 100%),linear-gradient(212deg, rgba(80, 80, 80,0.05) 0%, rgba(80, 80, 80,0.05) 50%,rgba(243, 243, 243,0.05) 50%, rgba(243, 243, 243,0.05) 100%),radial-gradient(circle at center center, hsl(107,19%,100%),hsl(107,19%,100%));
   .main-container-inner{
-    background-color: #fff;
-    border-radius: 3px;
-    box-sizing: border-box;
-    padding: 50px 40px;
-    box-shadow: 0 0 1px 0 rgba(0,0,0,0.30);
     min-height: 500px;
+    max-width: 1400px;
+    margin: 0 auto;
+    background: #FFFFFF;
+    box-sizing: border-box;
+    border: 1px solid #DDDDDD;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.101972);
+    border-radius: 5px;
+
+    .header-wrapper{
+      padding: 20px 50px;
+    }
     &.flex-inner{
       display: flex;
       align-items: center;
@@ -46,8 +53,9 @@ p{
     }
   }
   .section-header{
+    max-width: 1400px;
     width: 100%;
-    margin-bottom: 25px;
+    margin: 0 auto 25px;
     display: inline-block;
     .section-title{
       float: left;
@@ -155,4 +163,101 @@ p{
   -webkit-user-select: none;
   -ms-user-select: none;
   user-select: none;
+}
+
+.container-checkbox {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  .text{
+    position: relative;
+    top: 2px;
+  }
+}
+
+/* Hide the browser's default checkbox */
+.container-checkbox input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px!important;
+  width: 18px!important;
+  background-color: #fff;
+  border: 1px solid #DDDDDD;
+  border-radius: 5px;
+}
+
+/* On mouse-over, add a grey background color */
+.container-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.container-checkbox input:checked ~ .checkmark {
+  background-color:#FF8D00;
+  border-color:#FF8D00;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.container-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.container-checkbox .checkmark:after {
+  left: 7.2px;
+  top: 3px;
+  width: 2px;
+  height: 7px;
+  border: solid white;
+  border-width: 0 2.5px 2.5px 0;
+  transform: rotate(45deg);
+}
+::-webkit-scrollbar {
+    transition: all .2s ease;
+    background-color:#f6f6f6!important;
+  }
+::-webkit-scrollbar-thumb {
+  background-color:rgba(0, 0, 0, .2)!important;
+}
+::-webkit-scrollbar {
+  transition: all .2s ease;
+  -webkit-appearance: none;
+  width: 5px !important;
+  height: 2px !important;
+  background-color: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background-color: transparent;
+  transition: all .2s ease;
+}
+
+::-webkit-scrollbar-thumb {
+  transition: all .2s ease;
+  border-radius: 5px;
+  background-color: #f6f6f6;
+  opacity: 1;
 }
